# cuinixam.github.io

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  Gemfile  README.md  REDESIGN.md  _config.yml  about.html  blogs.html  build.ps1  genindex.html  index.html  index.md  jarvis.ps1  minimal-mistakes-jekyll.gemspec  objects.inv  presentations.html  pypeline.yaml  pyproject.toml  search.html  searchindex.js  setup.py  teaching.html  timeline.html
.doctrees/: about.doctree  blogs.doctree  environment.pickle  index.doctree  presentations.doctree  teaching.doctree  timeline.doctree
.doctrees/blogs/2024/: efficiently_embedding_git_information_in_c_projects.doctree  first_blog.doctree  homelab_setup_main_machine.doctree  optimizing_tool_installation_in_spl_build_environments.doctree
.doctrees/blogs/2025/: allocate_memory_sections.doctree  c_portable_pointer_size.doctree  coding_dojo_detect_ci_context.doctree  spl_bootstrap.doctree  spled_meets_arduino.doctree  vs_code_ctest.doctree  what_you_did_not_want_to_know_about_your_code.doctree  yanga_spl_components.doctree
.doctrees/blogs/2026/: hello_diátaxis.doctree  smarty.doctree  smarty_p1.doctree  smarty_p2.doctree
.github/workflows/: ci.yml
_data/: navigation.yml
_landing/: landing.css
_pages/: about.md  presentations.md
_posts/: 2022-10-06-how-to-create-jekyll-gh-pages.md
_presentations/: working_experience.md  yanga.md
_presentations/objectives_2024/: index.html  presentation.md
_presentations/working_experience/: presentation.html  presentation.md
_presentations/yanga/: presentation.html  presentation.md
_sources/: about.md.txt  blogs.md.txt  index.md.txt  presentations.md.txt  teaching.md.txt  timeline.md.txt
_sources/blogs/2024/: efficiently_embedding_git_information_in_c_projects.md.txt  optimizing_tool_installation_in_spl_build_environments.md.txt
_sources/blogs/2025/: c_portable_pointer_size.md.txt  coding_dojo_detect_ci_context.md.txt  spled_meets_arduino.md.txt  vs_code_ctest.md.txt  what_you_did_not_want_to_know_about_your_code.md.txt
_sources/blogs/2026/: hello_diátaxis.md.txt  smarty.md.txt  smarty_p1.md.txt
_static/: custom.css  lessons.css  reveal.css
_static/js/markmap/: markmap.js
alex/erdkunde_8e/: index.html
assets/css/: reveal.css
blogs/: 2024.html  2025.html  2026.html  archive.html  atom.xml  category.html  drafts.html  tag.html
blogs/2024/: efficiently_embedding_git_information_in_c_projects.html  first_blog.html  homelab_setup_main_machine.html  optimizing_tool_installation_in_spl_build_environments.html
blogs/2025/: allocate_memory_sections.html  c_portable_pointer_size.html  coding_dojo_detect_ci_context.html  spl_bootstrap.html  spled_meets_arduino.html  vs_code_ctest.html  what_you_did_not_want_to_know_about_your_code.html  yanga_spl_components.html
blogs/2026/: hello_diátaxis.html  smarty.html  smarty_p1.html  smarty_p2.html
blogs/category/: blog.html  build.html  coding-dojo.html  dependency.html  design.html  diy.html  learning.html  optimization.html  review.html  spl.html  tool.html  yanga.html
blogs/tag/: ai.html  ansible.html  arduino.html  blog.html  bootstrap.html  build.html  c.html  clanguru.html  cmake.html  coding-dojo.html  component.html  ctest.html  cytoscape.html  dependency.html  diataxis.html  docker.html  docs.html  esp-idf.html  esp32.html  espressif.html  first.html  gcc.html  getting-started.html  gtest.html  homelab.html  linker-scripting-language.html  linker.html  lsl.html  matter.html  memory.html  nm.html  null.html  objects.html  optimization.html  pointer.html  portability.html  portainer.html  python.html  section.html  setup.html  (+18 more)
coding_dojo_ci_context/: presentation.html  slides.md
comparing_objects/: index.html
docs/: about.md  conf.py  index.md  presentations.json  presentations.md  teaching.json  teaching.md  timeline.json  timeline.md
docs/_static/: custom.css  filament.css  reveal.css
docs/_templates/: hello.html
docs/blogs/2024/: first_blog.md  homelab_setup_main_machine.md  optimizing_tool_installation_in_spl_build_environments.md
docs/blogs/2025/: allocate_memory_sections.md  spl_bootstrap.md  spled_on_arduino.md  what_you_did_not_want_to_know_about_your_code.md  yanga_spl_components.md
docs/blogs/2026/: hello_diátaxis.md  smarty.md  smarty_p1.md  smarty_p2.md
docs/notebooks/comparing_objects/: index.html
docs/notebooks/linear_functions/: index.html
docs/notebooks/statistical_analysis/: index.html
docs/presentations/objectives_2024/: index.html
docs/presentations/objects_deps/: index.html
docs/presentations/yanga/: slides.md  (+1 more)
linear_functions/: index.html
linear_functions/assets/: _baseMap-CLDR0GqA.js  chunk-5HRBRIJM-BjPnW7nP.js  chunk-KFBOBJHC-hXQF65pO.js  clone-CDS1CeAK.js  compile-Db8BeCVu.js  dagre-4EVJKHTY-BXeRoIOd.js  diagram-QW4FP2JN-D0NDtG1H.js  edit-page-BNdRA1uC.js  flowDiagram-7ASYPVHJ-lC9DJhRH.js  ganttDiagram-NTVNEXSI-hkvJoFTW.js  index-COvKCHk8.js  index-CW1KDGvy.js  index-Cd7-p_xX.js  index-CxPTAYf4.js  index-DCHQCt-t.js  index-Dp-c9ENd.js  infoDiagram-A4XQUW5V-BirfBVjM.js  journeyDiagram-G5WM74LC-D9BJGMjg.js  mermaid-BI-CszJi.js  quadrantDiagram-OS5C2QUG-DLfun-FB.js  run-page-DRGK1sHN.js  vega-component-DENq2UdZ.js
objectives_2024/: presentation.md
objects_deps/: index.html
spl/: index.html
spled_yanga_reports/: index.html
src/jarvis/: _md.py  _run.py  about.py  blog.py  landing.py  main.py  my_app.py  presentations.py  teaching.py  timeline.py  writing.py
statistical_analysis/: Date_base_for_Assignment.csv
statistical_analysis/assets/: VegaLite-CL-9-QyL.js  architectureDiagram-UYN6MBPD-DqrP6Et1.js  blockDiagram-ZHA2E4KO-2FqUqn01.js  chunk-ASOPGD6M-nphTjt5X.js  gitGraphDiagram-NRZ2UAAF-Bm5LD4Oi.js  index-BJDotLVd.js  index-Dsn_YCYO.js  kanban-definition-QRCXZQQD-Q7-ZlrZ-.js  linear-DIA_vzu5.js  min-D0K32hqh.js  sequenceDiagram-G6AWOVSC-D4JVypeE.js  terminal-BL7-7vnM.js
tests/: test_about.py  test_my_app.py  test_timeline.py  test_writing.py
working_experience/: presentation.html
yanga/: presentation.html  slides.md
(+406 files in other folders)
